--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
     
       - name: Deploy to Kubernetes cluster
         run: |
-          kubectl apply kubernetes/
+          kubectl apply -f deployment.yaml
 
       #- name: Deploy to Kubernetes cluster
         #run: |
